--- a/moogle.html
+++ b/moogle.html
@@ -7,7 +7,9 @@
 <h1>Welcome to Moogle!</h1>
 <p>
 <form>Search: <input type="text" name="q" />
+	Case Sensitive: <input type="checkbox" name="case" value="sensitive" />
 </form>
+</br>
 <hr>
 <address></address>
 <!-- hhmts start --> Last modified: Mon Feb  8 20:16:02 EST 2010 <!-- hhmts end -->
